--- a/src/paragon-framework/modules/_modules-components.scss
+++ b/src/paragon-framework/modules/_modules-components.scss
@@ -6,6 +6,7 @@
 @import 'forms/card-controls';
 // @import 'actions/actions'; // Replaced by component "actions"
 // @import 'actions/button-group'; // Replaced by component "actions"
+@import 'avatar/avatar';
 @import 'pagination/pagination';
 @import 'tooltip/tooltip';
 @import 'card/card';
