--- a/src/paragon-framework/actions/button-theme-dark.scss
+++ b/src/paragon-framework/actions/button-theme-dark.scss
@@ -1,21 +1,20 @@
 //Dark Theme - all colors must be specified, even if they are the same as another theme.
-$buttonConfig:
-  'black'     $color-black       $color-black          $color-white,
-  'blue'      $color-blue        $color-blue-dark      $color-white,
-  'gray'      $button-gray-bg    $button-gray-hover    $button-gray-text,
-  'green'     $color-green       $color-green-dark     $color-white,
-  'orange'    $color-orange      $color-orange-dark    $color-black,
-  'primary'   $button-primary-bg $button-primary-hover $button-primary-text,
-  'purple'    $color-purple      $color-purple-dark    $color-white,
-  'red'       $color-red         $color-red-dark       $color-white,
-  'secondary' $button-gray-bg    $button-gray-hover    $button-gray-text,
-  'white'     $color-white       $color-hover          $color-black;
+$buttonConfig: 'black'     $color-black       $color-black          $color-white,
+	'blue'      $color-blue        $color-blue-dark      $color-white,
+	'gray'      $button-gray-bg    $button-gray-hover    $button-gray-text,
+	'green'     $color-green       $color-green-dark     $color-white,
+	'orange'    $color-orange      $color-orange-dark    $color-black,
+	'primary'   $button-primary-bg $button-primary-hover $button-primary-text,
+	'purple'    $color-purple      $color-purple-dark    $color-white,
+	'red'       $color-red         $color-red-dark       $color-white,
+	'secondary' $button-gray-bg    $button-gray-hover    $button-gray-text,
+	'white'     $color-white       $color-hover          $color-black;
 
 //For each, read the color name.
 //Then use the other items in numbered order to supply the colored variables
 @each $color in $buttonConfig {
-  //theme name to apply is first, in this case "darkmode"
-  .darkmode {
-    @include button-setup($color);
-  }
+	//theme name to apply is first, in this case "darkmode"
+	.darkmode {
+		@include button-setup($color);
+	}
 }
