--- a/src/paragon-framework/paragon.scss
+++ b/src/paragon-framework/paragon.scss
@@ -12,6 +12,7 @@
 @import 'modules/forms/forms';
 @import 'modules/typography/typography';
 @import 'modules/icons/icons';
+@import 'modules/navigation/navigation';
 
 
 @font-face {
