Grid Refactor (DS-63) (#160)
* remove grid fallbacks, remove old dashing grid, add grid-reverse class, add box-sizing to base files

--- a/src/styles/application-components.scss
+++ b/src/styles/application-components.scss
@@ -10,7 +10,8 @@
 
 // Import components here - this could reside in a "config" file?
 @import "../paragon-framework/actions/actions"; //Component "Actions"
-@import "../paragon-framework/modules/grid/grid"; //Component "Grid"
+// @import "../paragon-framework/grid/grid"; //Component "Grid"
+
 
 //Import modules here (before they are made official components)
 @import "../paragon-framework/modules/modules-components";
