--- a/src/paragon-framework/modules/typography/_typography.scss
+++ b/src/paragon-framework/modules/typography/_typography.scss
@@ -19,7 +19,17 @@
 	white-space: nowrap;
 }
 
-.break-word { word-wrap: break-word; }
+.break-word {
+	-ms-hyphens: auto;
+	-moz-hyphens: auto;
+	-webkit-hyphens: auto;
+	hyphens: auto;
+	overflow-wrap: break-word;
+	-ms-word-break: break-all;
+	word-break: break-all;
+	word-break: break-word;
+	word-wrap: break-word;
+}
 
 /* Typography Styles
   =========================================================================== */
