Add Brand System design tokens with dark mode

--- a/src/paragon-framework/base/_base.scss
+++ b/src/paragon-framework/base/_base.scss
@@ -5,6 +5,7 @@
 /* Imported base components
   ================================================== */
 @import 'colors/given-colors';
+@import 'colors/theme-switcher';
 @import 'mixins/mixins';
 @import 'variables/variables';
 @import 'utilities/utilities';
